# clawtodos

./: .gitignore  BOOTSTRAP.md  CHANGELOG.md  README.md  SPEC-v3.1.md  SPEC.md  install.py  pyproject.toml
.github/workflows/: conformance.yml  release.yml
examples/: INBOX.example.md  TODOS.example.md  registry.yaml
examples/demo/: OUTREACH.md  two_agent_race.sh
openclaw/clawtodos/: SKILL.md
openclaw/clawtodos-review/: SKILL.md
skills/: RESOLVER.md
skills/clawtodos/: SKILL.md  routing-eval.jsonl
skills/clawtodos/scripts/: clawtodos.mjs
snippets/: AGENTS_SNIPPET.md
src/clawtodos/: __init__.py  cli.py  core.py  events.py  mcp_server.py
test/: clawtodos.test.ts
test/e2e/: clawtodos-e2e.test.ts
test/python/: test_cli_lifecycle.py  test_cli_v31.py  test_events.py  test_mcp_server.py
